--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
   "name": "skedaddle",
-  "version": "1.0.0",
-  "description": "Scheduling app to help groups find a time to meet",
-  "main": "index.js",
-  "scripts": {
-    "start": "live-server public/",
-    "build": "webpack --watch"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/7u1ian/skedaddle.git"
-  },
-  "author": "Jason Chen",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/7u1ian/skedaddle/issues"
-  },
-  "homepage": "https://github.com/7u1ian/skedaddle#readme",
-  "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/preset-react": "^7.14.5",
-    "babel-loader": "^8.2.2",
-    "live-server": "^1.2.1",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0"
-  },
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
